      and the variant directory doesn't already exist.

    - Fix scanning of Unicode files for both UTF-16 endian flavors.

    - Fix a TypeError on #include of file names with Unicode characters.

    - Fix an exception if a null command-line argument is passed in.

    - Evaluate Requires() prerequisites before a Node's direct children
      (sources and dependencies).

  From Greg Noel:

    - Remove leftover __metaclass__ initializations in Environment.py.

    - Correct the documentation of text returned by sconf.Result().

    - Document that filenames with '.' as the first character are
      ignored by Glob() by default (matching UNIX glob semantics).

    - Fix SWIG testing infrastructure to work on Mac OS X.

  From Gary Oberbrunner:

    - When reporting a target that SCons doesn't know how to make,
      specify whether it's a File, Dir, etc.

  From Ben Webb:

    - Fix use of $SWIGOUTDIR when generating Python wrappers.

    - Add $SWIGDIRECTORSUFFIX and $SWIGVERSION construction variables.



RELEASE 1.2.0.d20090223 - Mon, 23 Feb 2009 08:41:06 -0800

  From Stanislav Baranov:

    - Make suffix-matching for scanners case-insensitive on Windows.

  From David Cournapeau:

    - Change the way SCons finds versions of Visual C/C++ and Visual
      Studio to find and use the Microsoft v*vars.bat files.

  From Robert P. J. Day:

    - User's Guide updates.

  From Dan Eaton:

    - Fix generation of Visual Studio 8 project files on x64 platforms.

  From Allan Erskine:

    - Set IncludeSearchPath and PreprocessorDefinitions in generated
      Visual Studio 8 project files, to help IntelliSense work.

  From Mateusz Gruca:

    - Fix deletion of broken symlinks by the --clean option.

  From Steven Knight:

    - Fix the error message when use of a non-existent drive on Windows
      is detected.

    - Add sources for files whose targets don't exist in $CHANGED_SOURCES.

    - Detect implicit dependencies on commands even when the command is