@@ -6,19 +6,24 @@ SCons/Platform/posix.xml
 SCons/Platform/sunos.xml
 SCons/Platform/win32.xml
 SCons/Tool/386asm.xml
-SCons/Tool/aixcc.xml
+SCons/Tool/BitKeeper.xml
+SCons/Tool/CVS.xml
+SCons/Tool/Perforce.xml
+SCons/Tool/RCS.xml
+SCons/Tool/SCCS.xml
+SCons/Tool/Subversion.xml
+SCons/Tool/__init__.xml
 SCons/Tool/aixc++.xml
+SCons/Tool/aixcc.xml
 SCons/Tool/aixf77.xml
 SCons/Tool/aixlink.xml
 SCons/Tool/applelink.xml
 SCons/Tool/ar.xml
 SCons/Tool/as.xml
 SCons/Tool/bcc32.xml
-SCons/Tool/BitKeeper.xml
+SCons/Tool/c++.xml
 SCons/Tool/cc.xml
 SCons/Tool/cvf.xml
-SCons/Tool/CVS.xml
-SCons/Tool/c++.xml
 SCons/Tool/default.xml
 SCons/Tool/dmd.xml
 SCons/Tool/dvi.xml
@@ -28,31 +33,30 @@ SCons/Tool/f77.xml
 SCons/Tool/f90.xml
 SCons/Tool/f95.xml
 SCons/Tool/fortran.xml
+SCons/Tool/g++.xml
 SCons/Tool/g77.xml
 SCons/Tool/gas.xml
 SCons/Tool/gcc.xml
 SCons/Tool/gnulink.xml
 SCons/Tool/gs.xml
-SCons/Tool/g++.xml
-SCons/Tool/hpcc.xml
 SCons/Tool/hpc++.xml
+SCons/Tool/hpcc.xml
 SCons/Tool/hplink.xml
 SCons/Tool/icc.xml
 SCons/Tool/icl.xml
 SCons/Tool/ifl.xml
 SCons/Tool/ifort.xml
-SCons/Tool/ilink32.xml
 SCons/Tool/ilink.xml
-SCons/Tool/__init__.xml
-SCons/Tool/intelc.xml
+SCons/Tool/ilink32.xml
 SCons/Tool/install.xml
+SCons/Tool/intelc.xml
 SCons/Tool/jar.xml
 SCons/Tool/javac.xml
 SCons/Tool/javah.xml
 SCons/Tool/latex.xml
 SCons/Tool/lex.xml
-SCons/Tool/linkloc.xml
 SCons/Tool/link.xml
+SCons/Tool/linkloc.xml
 SCons/Tool/m4.xml
 SCons/Tool/masm.xml
 SCons/Tool/midl.xml
@@ -70,24 +74,21 @@ SCons/Tool/packaging/__init__.xml
 SCons/Tool/pdf.xml
 SCons/Tool/pdflatex.xml
 SCons/Tool/pdftex.xml
-SCons/Tool/Perforce.xml
 SCons/Tool/qt.xml
-SCons/Tool/RCS.xml
 SCons/Tool/rmic.xml
 SCons/Tool/rpcgen.xml
-SCons/Tool/SCCS.xml
 SCons/Tool/sgiar.xml
-SCons/Tool/sgicc.xml
 SCons/Tool/sgic++.xml
+SCons/Tool/sgicc.xml
 SCons/Tool/sgilink.xml
-SCons/Tool/Subversion.xml
 SCons/Tool/sunar.xml
-SCons/Tool/suncc.xml
 SCons/Tool/sunc++.xml
+SCons/Tool/suncc.xml
 SCons/Tool/sunlink.xml
 SCons/Tool/swig.xml
 SCons/Tool/tar.xml
 SCons/Tool/tex.xml
+SCons/Tool/textfile.xml
 SCons/Tool/tlib.xml
 SCons/Tool/yacc.xml
 SCons/Tool/zip.xml
